# Driver-Drowsiness-Detection

./: .gitignore  README.md  main.py  requirements.txt  setup.cfg
data/: __init__.py  dataset.py  utils.py
models/: __init__.py  resnet.py
notebooks/: prototype_v1.ipynb  prototype_v2.ipynb
training/: __init__.py  train.py
