[metadata]
name = driver-drowsiness-detector
version = 0.1.0
description = A ResNet50-based driver drowsiness detection system
author = Your Name
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    torch
    torchvision
    scikit-learn
    numpy
    fastapi
    uvicorn
    pillow

python_requires = >=3.8

[options.package_data]
* = *.pt

[options.entry_points]
console_scripts =
    detect-drowsiness = drowsiness.cli:main  # optional CLI entry point
